# wax

./: .gitignore  .gitlab-ci.yml  .gitmodules  .npmrc  CMakeLists.txt  README.md  api.md  build.py  cpython_interface.cpp  cpython_interface.hpp  embind_gen.js  npm.ts.md  package-lock.json  package.json  package.json.template  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  rollup.config.js  setup.py  tsconfig.json  wax.pxd  wax.pyx
.devcontainer/: devcontainer.json
.husky/: pre-commit
core/: binary_view_helper.cpp  binary_view_helper.hpp  foundation.cpp  foundation.hpp  hive_protocol_types.hpp  minimize_required_signatures_helper.cpp  minimize_required_signatures_helper.hpp  protobuf_protocol_impl.hpp  protobuf_protocol_impl.inl  protocol_impl.hpp  protocol_impl.inl  signing_keys_collector.cpp  signing_keys_collector.hpp  spec.cpp  types.hpp  utils.hpp
core/binary_view/: binary_node_helper.hpp  node_types.hpp  stringify.hpp  traits.hpp
docker/: wax-ci-base-image.dockerfile  wax-python-builder.dockerfile
example/python/: example.py
examples/html/: index.html  wax-web-full.js
examples/nextjs-app/: .npmrc  next.config.mjs  package.json  pnpm-lock.yaml
examples/node-app/: package.json  pnpm-lock.yaml
examples/node-app/src/: index.ts
examples/python/: README.md  proto_validate_api_response.example.py  run_example.sh  visitor_example.py
examples/ts/: README.md  index.ts  package.json  pnpm-lock.yaml  proto_sign_transaction.example.ts  proto_validate_api_response.example.ts  std_set_iterable.ts  tsconfig.json  visitor.example.ts
examples/ts/assets/: beekeeper.html  proto_sign_transaction.example.html  proto_validate_api_response.example.html  visitor.example.html  wax.html
examples/ts/html/: README.md  package.json  pnpm-lock.yaml
examples/ts/nextjs-app/: package.json  pnpm-lock.yaml
examples/ts/node-app/: package.json  pnpm-lock.yaml  tsconfig.json
examples/ts/vue/: README.md
python/: CMakeLists.txt  build.py  cpython_interface.hpp  pyproject.toml  wax.pxd  wax.pyx
python/docker/: Dockerfile.ci  wax-python-builder.dockerfile
python/protobuf_patterns/: account_create_pb2.pyi  account_create_with_delegation_pb2.py  account_create_with_delegation_pb2.pyi  account_created_pb2.pyi  account_update2_pb2.py  account_update2_pb2.pyi  account_update_pb2.py  account_update_pb2.pyi  account_witness_proxy_pb2.py  account_witness_proxy_pb2.pyi  account_witness_vote_pb2.pyi  author_reward_pb2.py  author_reward_pb2.pyi  authority_pb2.pyi  block_pb2.py  cancel_transfer_from_savings_pb2.py  cancel_transfer_from_savings_pb2.pyi  change_recovery_account_pb2.py  change_recovery_account_pb2.pyi  changed_recovery_account_pb2.py  changed_recovery_account_pb2.pyi  claim_account_pb2.pyi  claim_reward_balance_pb2.pyi  clear_null_account_balance_pb2.pyi  collateralized_convert_immediate_conversion_pb2.py  collateralized_convert_immediate_conversion_pb2.pyi  collateralized_convert_pb2.py  collateralized_convert_pb2.pyi  comment_benefactor_reward_pb2.pyi  comment_options_pb2.pyi  comment_payout_update_pb2.pyi  comment_pb2.pyi  comment_reward_pb2.pyi  consolidate_treasury_balance_pb2.py  consolidate_treasury_balance_pb2.pyi  convert_pb2.pyi  create_claimed_account_pb2.pyi  create_proposal_pb2.pyi  curation_reward_pb2.py  curation_reward_pb2.pyi  (+106 more)
python/scripts/: build_ci_base_image.sh  build_wax.sh  compile_proto.sh  prepare_boost.sh
python/tests/: run_tests.sh
python/tests/operation_visitor/: test_abstract_operation_visitor.py
python/tests/operations/: test_proto_decline_voting_rights.py  test_proto_delete_comment.py  test_proto_escrow_approve.py  test_proto_escrow_release.py  test_proto_limit_order_cancel.py  test_proto_request_account_recovery.py  test_proto_transfer.py  test_proto_transfer_from_savings.py  test_proto_witness_set_properties.py
python/tests/other/: consts.py  test_asset_creation_methods.py  test_calculate_manabar_full_regeneration_time.py  test_calculate_private_key.py  test_calculate_public_key.py  test_calculate_sig_digest.py  test_calculate_transaction_id.py  test_decode_and_encode_encrypted_memo.py  test_exception_handling.py  test_generate_password_based_private_key.py  test_serialize_and_deserialize_witness_set_properties.py  test_serialize_transaction.py  test_suggest_brain_key.py  test_validate_operation.py  test_validate_proto_operation.py  test_validate_proto_transaction.py  test_validate_transaction.py  util.py
python/tests/proto-protocol/: test_api_to_proto.py  test_get_proto_tapos_data.py  test_proto_to_legacy_api.py  test_wrong_future_extentions.py
python/tests/protocol/: test_calculate_current_manabar_value.py  test_calculate_hp_apr.py  test_calculate_inflation_rate_for_block.py  test_calculate_manabar_full_regeneration_time.py  test_calculate_sig_digest.py  test_calculate_transaction_id.py  test_check_memo_for_private_keys.py  test_collect_signing_keys.py  test_get_hive_constants.py  test_get_hive_protocol_config.py  test_get_tapos_data.py  test_hbd_to_hive.py  (+10 more)
python/wax/: __init__.py  wax.pyi  wax_result.py  wax_visitor.py
samples/ts/: npm-pack.out
scripts/: build_wax_ci_base_image.sh  build_wax_python.sh  bump_npm_version.sh  compile_proto_python.sh  compile_proto_ts.sh  generate_api_docs.sh  npm_publish.sh  precommit_hook.sh
ts/: LICENSE.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
ts/.husky/: pre-commit
ts/scripts/: compile_proto_ts.sh  generate_api_docs.sh
ts/wasm/: build_wasm_wax.sh
ts/wasm/src/: CMakeLists.txt  wasm_interface.cpp
wasm/: build_wasm_wax.sh  wax.d.ts
wasm/__tests__/: index.spec.ts  protocol.spec.ts  test.html
wasm/configs/: tsconfig.tests.json
wasm/lib/: errors.ts  index.ts  interfaces.ts  node.ts  protocol.ts  visitor.ts  wax.ts  wax_module.node.ts  wax_module.ts  web.ts
wasm/src/: CMakeLists.txt  set_binding.hpp  wasm_interface.cpp
wasm/wax_wasm_test/: run_node.mjs  run_node.mts_test.sh
wax/: __init__.py  example.py  visitor.py  wax.pyi  wax_result.py  wax_visitor.py
wax/tests/: proto_transaction_test.py  run_tests.sh  transaction_test.py
(+734 files in other folders)
