[build-system]
requires = [
    "poetry-core>=1.1.0",
    "cython==0.29.34",
    "setuptools>=67.8.0",
    "poetry-dynamic-versioning>=0.22.0"
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "wax"
version = "0.0.0"
description = ""
repository = "https://gitlab.syncad.com/hive/clive"
authors = []
packages = [
    { include = "wax" },
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10"
proto = { path}

[tool.poetry.dev-dependencies]
types-setuptools = ">=67.8.0"
mypy = "1.5.1"
mypy-extensions = "1.0.0"
mypy-protobuf = "3.5.0"
protobuf = "4.24.2"
types-protobuf = "4.24.0.1"
grpcio = "1.57.0"
grpcio-tools = "1.57.0"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- set dirty_postfix = '.dirty' if dirty else '' -%}
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
    "wax/__init__.py",
]
