[build-system]
requires = [
    "poetry-core>=1.1.0",
    "cython==0.29.34",
    "setuptools>=67.8.0",
    "poetry-dynamic-versioning>=0.22.0"
]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "wax"
version = "0.0.0"
description = ""
repository = "https://gitlab.syncad.com/hive/clive"
authors = []
packages = [
    { include = "wax"},
    { include = "wax/proto" }
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "4.24.2"

[tool.poetry.dev-dependencies]
types-setuptools = ">=67.8.0"
mypy = "1.5.1"
mypy-extensions = "1.0.0"
mypy-protobuf = "3.5.0"
protobuf = "4.24.2"
types-protobuf = "4.24.0.1"
grpcio = "1.57.0"
grpcio-tools = "1.57.0"

[tool.poetry-dynamic-versioning]
enable = true
metadata = true
tagged-metadata = true
dirty = true
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = [
    "wax/__init__.py",
]
